--- a/indexsin.html
+++ b/indexsin.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Dasun">
-    <title>"රූසර-2022, The Digital Art Competition"</title>
+    <title>"රූසර ඩිජිටල් නිර්මාණ තරඟාවලිය"</title>
    
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
@@ -48,16 +48,16 @@
             </a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="dubbingeng.html">Dubbing <span class="sr-only"></span></a>
+                    <a class="nav-link" href="dubbingsin.html">හඬ කැවීම <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="photomanipulationeng.html">Photo Manip..</a>
+                    <a class="nav-link" href="photomanipulationsin.html">ඡායාරූප සැකසීම </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="comiccharactereng.html">Comic Character</a>
+                    <a class="nav-link" href="comiccharactersin.html">ඩිජිටල් චරිත සිතුවම් </a>
                 </li>
                 <li class="nav-item">
-                    <a href="https://forms.gle/fZN97nDpnXTURfNn7" class="btn btn-primary ml-xl-4">Upload</a>
+                    <a href="https://forms.gle/DAHDQkRpsyEmDgAm8" class="btn btn-primary ml-xl-4">Upload</a>
                 </li>
             </ul>
         </div>
@@ -65,10 +65,10 @@
     <!-- header -->
     <header id="home" class="header">
         <div class="overlay text-white text-center">
-            <h1 class="display-2 font-weight-bold my-3">“Let my country be awake”</h1>
-            <h3 class="display-4 mb-5">The Students’ Festival of Literature</h3>
+            <h1 class="display-2 font-weight-bold my-3">"මාගේ දේශය අවදි කරනු මැන"</h1>
+            <h3 class="display-4 mb-5">ශිෂ්‍ය සාහිත්‍යය උළෙල</h3>
 			<h2 class="display-4 mb-5">2022</h2>
-            <a class="btn btn-lg btn-primary" href="gallaryeng.html">View Our Gallery <i class="ti-location-arrow"></i></a>
+            <a class="btn btn-lg btn-primary" href="gallarysin.html">View Our Gallery <i class="ti-location-arrow"></i></a>
         </div>
     </header>
 
@@ -79,16 +79,16 @@
             <div class="col-lg-6">
                 <div class="row justify-content-center">
                     <div class="col-sm-8 py-5 my-5">
-                        <h3 class="mb-4">INTRODUCTION</h3>
-                        <p><b><i>“රූසර-2022, The Digital Art Competition”</i></b> is organized for the second consecutive time as one of the events which is organized along with <i><b>“Let my country be awake”</i></b>, The Students’ Festival of Literature organized by the Literary Subcommittee of University of Peradeniya. This competition consists of three main categories which are Dubbing, Photo Manipulation, and Comic Character Creation.</p>
-                        <h3 class="mb-4">TIMELINE</h3>
-						<p>From <b>July 2022 </b> to <b>August 2022</b></p>
-						<h3 class="mb-4">OBJECTIVES</h3>
-                        <p>
-						<li>To improve the technical and aesthetic knowledge and interest in digital arts.</li>
-						<li>To improve creativity.</li>
-						<li>To exhibit the skills in digital arts. </li>
-						<li>To the enjoyment and appreciation of different kinds of digital arts. </li>
+                        <h3 class="mb-4" style="text-align:center">හැදින්වීම</h3>
+                        <p style="text-align:justify"><b><i>"මාගේ දේශය අවදි කරනු මැන"</b></i> ශිෂ්‍ය සාහිත්‍ය උළෙලට සමගාමීව, පේරාදෙණිය විශ්ව විද්‍යාලීය ඉංජිනේරු පීඨය විසින්  <b><i>"රූසර ඩිජිටල් නිර්මාණ තරඟාවලිය"</b></i> දෙවන වරට සංවිධානය කරනු ලබයි. තරඟාවලිය <b><i>හඬ කැවීම්, ඡායාරූප සැකසීම්, ඩිජිටල් චරිත සිතුවම් නිර්මාණය</b></i> යන ප්‍රධාන තරඟ අංශ යටතේ පැවැත්වේ. </p>
+                        <h3 class="mb-4" style="text-align:center">කාල සීමාව</h3>
+						<p><b>2022 ජූලි මස</b> සිට <b>2022 අගෝසතු මස</b> දක්වා </p>
+						<h3 class="mb-4" style="text-align:center">අරමුණු</h3>
+                        <p style="text-align:justify">
+						<li>ඩිජිටල් කලාව පිළිබද තාක්ෂණික හා සෞන්දර්යාත්මක දැනුම හා උන්නදුව වැඩිදියුණු කිරීම.</li>
+						<li>නිර්මාණශීලීත්වය වර්ධනය කිරීම.</li>
+						<li>ඩිජිටල් කලාව පිළිබද හැකියාවන් වර්ධනය කිරීම. </li>
+						<li>නොයෙක් වර්ගයේ ඩිජිටල් කලාවන් රසවිදීම හා අගය කිරීම.</li>
 						</p>
                     </div>
                 </div>
@@ -98,7 +98,7 @@
 
     <!--  gallary Section  -->
     <div id="gallary" class="text-center bg-dark text-light has-height-md middle-items wow fadeIn">
-        <h2 class="section-title">RUUSARA '21</h2>
+        <h2 class="section-title">රූසර '21</h2>
     </div>
     <div class="gallary row">
         <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
@@ -145,7 +145,7 @@
         </div>
         <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
             <img src="assets/imgs/gallary-24.jpg" class="gallary-img">
-            <a href="gallaryeng.html" class="gallary-overlay">
+            <a href="gallarysin.html" class="gallary-overlay">
                 <i class="gallary-icon ti-plus"></i>
             </a>
         </div>
@@ -216,9 +216,9 @@
                         <div class="card bg-transparent border my-3 my-md-0">
                             <img src="assets/imgs/event1.jpg" class="rounded-0 card-img-top mg-responsive">
                             <div class="card-body">
-                                <h4 class="pt20 pb20">Dubbing Competition </h4>
-                                <p class="text-white">Submissions for each category will be opened from the <b>9th of July 2022</b> to the <b>31st of July 2022</b>.</p>
-								<h3 class="text-center mb-4"><a href="dubbingeng.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>
+                                <h4 class="pt20 pb20">හඬ කැවීමේ තරඟාවලිය </h4>
+                                <p class="text-white">නිර්මාණ භාරගැනීම <b>2022 ජූලි මස 9</b> වන දින සිට <b>ජූලි මස 31</b> වන දින දක්වා විවෘතව ඇත.</p>
+								<h3 class="text-center mb-4"><a href="dubbing.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>
 							</div>
                         </div>
                     </div>
@@ -226,9 +226,9 @@
                         <div class="card bg-transparent border my-3 my-md-0">
                             <img src="assets/imgs/event2.jpg" class="rounded-0 card-img-top mg-responsive">
                             <div class="card-body">
-                                <h4 class="pt20 pb20">Photo Manipulation Competition</h4>
-                                <p class="text-white">Submissions for each category will be opened from the <b>9th of July 2022</b> to the <b>31st of July 2022</b>.</p>
-								<h3 class="text-center mb-4"><a href="photomanipulationeng.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>
+                                <h4 class="pt20 pb20">ඡායාරූප සැකසීම් තරඟාවලිය</h4>
+                                <p class="text-white">නිර්මාණ භාරගැනීම <b>2022 ජූලි මස 9 </b>වන දින සිට <b>ජූලි මස 31</b> වන දින දක්වා විවෘතව ඇත. </p>
+								<h3 class="text-center mb-4"><a href="photomanipulation.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>
 							</div>
                         </div>
                     </div>
@@ -236,9 +236,9 @@
                         <div class="card bg-transparent border my-3 my-md-0">
                             <img src="assets/imgs/event3.jpg" class="rounded-0 card-img-top mg-responsive">
                             <div class="card-body">
-                                <h4 class="pt20 pb20">Comic Character Creation Competition</h4>
-                                <p class="text-white">Submissions for each category will be opened from the <b>9th of July 2022</b> to the <b>31st of July 2022</b>.</p>
-								<h3 class="text-center mb-4"><a href="comiccharactereng.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>
+                                <h4 class="pt20 pb20">ඩිජිටල් චරිත සිතුවම් නිර්මාණ තරඟාවලිය</h4>
+                                <p class="text-white">නිර්මාණ භාරගැනීම <b>2022 ජූලි මස 9</b> වන දින සිට <b>ජූලි මස 31</b> වන දින දක්වා විවෘතව ඇත.</p>
+								<h3 class="text-center mb-4"><a href="comiccharacter.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>
 							</div>
                         </div>
                     </div>
@@ -250,12 +250,12 @@
 
     <!-- REVIEWS Section  -->
     <div id="testmonial" class="container-fluid wow fadeIn bg-dark text-light has-height-lg middle-items">
-        <h2 class="section-title my-5 text-center">JUDGE PANEL</h2>
+        <h2 class="section-title my-5 text-center">විනිශ්චය මණ්ඩලය</h2>
         <div class="row mt-3 mb-5">
             <div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
-                    <h3 class="testmonial-title">Athula Ransirilal</h3>
-                    <h6 class="testmonial-subtitle">Dubbing Competition</h6>
+                    <h3 class="testmonial-title">අතුල රන්සිරිලාල්</h3>
+                    <h6 class="testmonial-subtitle">හඬ කැවීමේ තරඟය</h6>
                     <div class="testmonial-body">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum nobis eligendi, quaerat accusamus ipsum sequi dignissimos consequuntur blanditiis natus. Aperiam!</p>
                     </div>
@@ -263,8 +263,8 @@
             </div>
             <div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
-                    <h3 class="testmonial-title">Pradeep Premalal</h3>
-                    <h6 class="testmonial-subtitle">Photo Manipulation Competition</h6>
+                    <h3 class="testmonial-title">ප්‍රදීප් ප්‍රේමලාල්</h3>
+                    <h6 class="testmonial-subtitle">ඡායාරූප සැකසීමේ තරඟය</h6>
                     <div class="testmonial-body">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum minus obcaecati cum eligendi perferendis magni dolorum ipsum magnam, sunt reiciendis natus. Aperiam!</p>
                     </div>
@@ -272,8 +272,8 @@
             </div>
             <div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
-                    <h3 class="testmonial-title">Harshaka Rathnakumara</h3>
-                    <h6 class="testmonial-subtitle">Comic Character Creation Competition</h6>
+                    <h3 class="testmonial-title">හර්ශක රත්න කුමාර</h3>
+                    <h6 class="testmonial-subtitle">ඩිජිටල් චරිත සිතුවම් නිර්මාණ තරඟය</h6>
                     <div class="testmonial-body">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, nam. Earum nobis eligendi, dignissimos consequuntur blanditiis natus. Aperiam!</p>
                     </div>
@@ -281,13 +281,13 @@
             </div>
 			<div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
-                    <h3 class="testmonial-title">Saranga</h3>
-                    <h6 class="testmonial-subtitle">Comic Character Creation Competition</h6>
+                    <h3 class="testmonial-title">සාරංග මහතා</h3>
+                    <h6 class="testmonial-subtitle">ඩිජිටල් චරිත සිතුවම් නිර්මාණ තරඟය</h6>
                     <div class="testmonial-body">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, nam. Earum nobis eligendi, dignissimos consequuntur blanditiis natus. Aperiam!</p>
                     </div>
                 </div>
-            </div>
+			</div>
         </div>
     </div>
 
@@ -298,12 +298,12 @@
                 <div id="" style="width: 100%; height: 100%; min-height: 400px"><p></br></p><p></br></p><p></br></p><img src = "assets/imgs/logo2.png" style="width:280px"></div>
             </div>
             <div class="col-md-6 px-5 has-height-lg middle-items">
-                <h3>Literary Subcommittee of University of Peradeniya</h3>
-                <p>“Let my country be awake”, The Students’ Festival of Literature - 2022 </br> Peradeniya Students’ Union, Literary Subcommittee of University of Peradeniya, University of Peradeniya</p>
+                <h3>සාහිත්‍ය අනුකමිටුව</h3>
+                <p>"මාගේ දේශය අවදි කරනු මැන" ශිෂ්‍ය සාහිත්‍ය උළෙල - 2022 </br> මහා ශිෂ්‍ය සංගමය, සාහිත්‍ය අනුකමිටුව, පේරාදෙණිය විශ්ව විද්‍යාලය</p>
                 <div class="text-muted">
                     <p><span class="ti-facebook pr-3"></span><a href = "https://www.facebook.com/MageDeshayaAwadiKaranuMena/" style = "color:#adb5bd">MageDeshayaAwadiKaranuMena</a></p>
-                    <p><span class="ti-support pr-3"></span> (94)70 136 7886 (Kalindu) ) </p>
-					<p><span class="ti-support pr-3"></span> (94)76 666 5859 (Shanuka) </p>
+                    <p><span class="ti-support pr-3"></span> (94)70 136 7886 (කලිඳු ) </p>
+					<p><span class="ti-support pr-3"></span> (94)76 666 5859 (ශානුක ) </p>
                     <p><span class="ti-email pr-3"></span>e19ruusara@gmail.com</p>
                 </div>
             </div>
