--- a/comiccharactereng.html
+++ b/comiccharactereng.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="indexeng.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="indexeng.html">Gallary</a>
+                    <a class="nav-link" href="indexeng.html">Gallery</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="indexeng.html">Social Media</a>
@@ -119,8 +119,8 @@
         <div class="row mt-3 mb-5">
             <div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
-                    <h3 class="testmonial-title">John Doe</h3>
-                    <h6 class="testmonial-subtitle">Web Designer</h6>
+                    <h3 class="testmonial-title">Athula Ransirilal</h3>
+                    <h6 class="testmonial-subtitle">Dubbing Competition</h6>
                     <div class="testmonial-body">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum nobis eligendi, quaerat accusamus ipsum sequi dignissimos consequuntur blanditiis natus. Aperiam!</p>
                     </div>
@@ -128,8 +128,8 @@
             </div>
             <div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
-                    <h3 class="testmonial-title">Steve Thomas</h3>
-                    <h6 class="testmonial-subtitle">UX/UI Designer</h6>
+                    <h3 class="testmonial-title">Pradeep Premalal</h3>
+                    <h6 class="testmonial-subtitle">Photo Manipulation Competition</h6>
                     <div class="testmonial-body">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum minus obcaecati cum eligendi perferendis magni dolorum ipsum magnam, sunt reiciendis natus. Aperiam!</p>
                     </div>
@@ -137,8 +137,17 @@
             </div>
             <div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
-                    <h3 class="testmonial-title">Miranda Joy</h3>
-                    <h6 class="testmonial-subtitle">Graphic Designer</h6>
+                    <h3 class="testmonial-title">Harshaka Rathnakumara</h3>
+                    <h6 class="testmonial-subtitle">Comic Character Creation Competition</h6>
+                    <div class="testmonial-body">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, nam. Earum nobis eligendi, dignissimos consequuntur blanditiis natus. Aperiam!</p>
+                    </div>
+                </div>
+            </div>
+			<div class="col-md-4 my-3 my-md-0">
+                <div class="testmonial-card">
+                    <h3 class="testmonial-title">Saranga</h3>
+                    <h6 class="testmonial-subtitle">Comic Character Creation Competition</h6>
                     <div class="testmonial-body">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, nam. Earum nobis eligendi, dignissimos consequuntur blanditiis natus. Aperiam!</p>
                     </div>
