--- a/dubbingeng.html
+++ b/dubbingeng.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="indexeng.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="indexeng.html">Gallary</a>
+                    <a class="nav-link" href="indexeng.html">Gallery</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="indexeng.html">Social Media</a>
@@ -81,7 +81,7 @@
                     <div class="col-sm-8 py-5 my-5">
                         <h3 class="mb-4" style="text-align:center">COMPETITION TERMS AND CONDITIONS</h3>
                         <p style="text-align:justify"><b>EVERYONE PARTICIPATING IN THE COMPETITION SHOULD READ AND UNDERSTAND ALL THE RULES OF THE COMPETITION.</p></b>
-						<ul>
+						<p style="text-align:justify">
 						<li>Competitors must submit their design online on or before the due date.</li>
 						<li>Only one design can be submitted per team.</li>
 						<li>Candidates can apply individually or in groups, with a maximum of five members per group.</li>
@@ -105,7 +105,7 @@
 						<li>The zip file should be re-registered with the registration number.</li>
 						<li>Only this file should be uploaded through the Google forum provided on the website. </li> 
 
-						</ul>
+						</p>
                     </div>
                 </div>
             </div>
@@ -125,8 +125,8 @@
         <div class="row mt-3 mb-5">
             <div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
-                    <h3 class="testmonial-title">John Doe</h3>
-                    <h6 class="testmonial-subtitle">Web Designer</h6>
+                    <h3 class="testmonial-title">Athula Ransirilal</h3>
+                    <h6 class="testmonial-subtitle">Dubbing Competition</h6>
                     <div class="testmonial-body">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum nobis eligendi, quaerat accusamus ipsum sequi dignissimos consequuntur blanditiis natus. Aperiam!</p>
                     </div>
@@ -134,8 +134,8 @@
             </div>
             <div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
-                    <h3 class="testmonial-title">Steve Thomas</h3>
-                    <h6 class="testmonial-subtitle">UX/UI Designer</h6>
+                    <h3 class="testmonial-title">Pradeep Premalal</h3>
+                    <h6 class="testmonial-subtitle">Photo Manipulation Competition</h6>
                     <div class="testmonial-body">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum minus obcaecati cum eligendi perferendis magni dolorum ipsum magnam, sunt reiciendis natus. Aperiam!</p>
                     </div>
@@ -143,8 +143,17 @@
             </div>
             <div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
-                    <h3 class="testmonial-title">Miranda Joy</h3>
-                    <h6 class="testmonial-subtitle">Graphic Designer</h6>
+                    <h3 class="testmonial-title">Harshaka Rathnakumara</h3>
+                    <h6 class="testmonial-subtitle">Comic Character Creation Competition</h6>
+                    <div class="testmonial-body">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, nam. Earum nobis eligendi, dignissimos consequuntur blanditiis natus. Aperiam!</p>
+                    </div>
+                </div>
+            </div>
+			<div class="col-md-4 my-3 my-md-0">
+                <div class="testmonial-card">
+                    <h3 class="testmonial-title">Saranga</h3>
+                    <h6 class="testmonial-subtitle">Comic Character Creation Competition</h6>
                     <div class="testmonial-body">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, nam. Earum nobis eligendi, dignissimos consequuntur blanditiis natus. Aperiam!</p>
                     </div>
