--- a/(root)/index.html
+++ b/(root)/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Dasun">
-    <title>"රූසර ඩිජිටල් නිර්මාණ තරගාවලිය"</title>
+    <title>"රූසර ඩිජිටල් නිර්මාණ තරඟාවලිය"</title>
    
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
@@ -24,19 +24,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#home">Home</a>
+                    <a class="nav-link" href="indexsin.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#about">About</a>
+                    <a class="nav-link" href="indexsin.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#gallary">Gallary</a>
+                    <a class="nav-link" href="indexsin.html">Gallery</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#social">Social Media</a>
+                    <a class="nav-link" href="indexsin.html">Social Media</a>
                 </li>
 				<li class="nav-item">
-                    <a class="nav-link" href="#event">Event</a>
+                    <a class="nav-link" href="indexsin.html">Event</a>
                 </li>
 				<li class="nav-item">
                     <a class="nav-link" href="#contact">Contact </a> <!--<span class="sr-only"></span></a>-->
@@ -48,13 +48,13 @@
             </a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="dubbing.html">හඬ කැවීම <span class="sr-only"></span></a>
+                    <a class="nav-link" href="dubbingsin.html">හඬ කැවීම <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="photomanipulation.html">ඡායාරූප සැකසීම </a>
+                    <a class="nav-link" href="photomanipulationsin.html">ඡායාරූප සැකසීම </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="comiccharacter.html">ඩිජිටල් චරිත සිතුවම් </a>
+                    <a class="nav-link" href="comiccharactersin.html">ඩිජිටල් චරිත සිතුවම් </a>
                 </li>
                 <li class="nav-item">
                     <a href="https://forms.gle/DAHDQkRpsyEmDgAm8" class="btn btn-primary ml-xl-4">Upload</a>
@@ -68,7 +68,7 @@
             <h1 class="display-2 font-weight-bold my-3">"මාගේ දේශය අවදි කරනු මැන"</h1>
             <h3 class="display-4 mb-5">ශිෂ්‍ය සාහිත්‍යය උළෙල</h3>
 			<h2 class="display-4 mb-5">2022</h2>
-            <p><a class="btn btn-lg btn-primary" href="indexeng.html">English <i class="ti-location-arrow"></i></a>&emsp;&emsp;<a class="btn btn-lg btn-primary" href="index.html">සිංහල <i class="ti-location-arrow"></i></a></p>
+            <p><a class="btn btn-lg btn-primary" href="indexeng.html">English <i class="ti-location-arrow"></i></a>&emsp;&emsp;<a class="btn btn-lg btn-primary" href="indexsin.html">සිංහල <i class="ti-location-arrow"></i></a></p>
         </div>
     </header>
 
@@ -81,10 +81,10 @@
             </div>
             <div class="col-md-6 px-5 has-height-lg middle-items">
                 <h3>සාහිත්‍ය අනුකමිටුව</h3>
-                <p>"මාගේ දේශය අවදි කරනු මැන" ශිෂ්‍ය සාහිත්‍ය උළෙල - 2022 </br> මහා ශිෂ්‍ය සංගමය, සාහිත්‍ය අනුකමිටුව, පේරාදෙණිය විද්‍යාලය</p>
+                <p>"මාගේ දේශය අවදි කරනු මැන" ශිෂ්‍ය සාහිත්‍ය උළෙල - 2022 </br> මහා ශිෂ්‍ය සංගමය, සාහිත්‍ය අනුකමිටුව, පේරාදෙණිය විශ්ව විද්‍යාලය</p>
                 <div class="text-muted">
                     <p><span class="ti-facebook pr-3"></span><a href = "https://www.facebook.com/MageDeshayaAwadiKaranuMena/" style = "color:#adb5bd">MageDeshayaAwadiKaranuMena</a></p>
-                    <p><span class="ti-support pr-3"></span> (94)70 136 7886 (කලිදු ) </p>
+                    <p><span class="ti-support pr-3"></span> (94)70 136 7886 (කලිඳු ) </p>
 					<p><span class="ti-support pr-3"></span> (94)76 666 5859 (ශානුක ) </p>
                     <p><span class="ti-email pr-3"></span>e19ruusara@gmail.com</p>
                 </div>
