--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
     </header>
 
-    
+    <div class="container-fluid has-bg-overlay text-center text-light has-height-lg middle-items" id="social">
     <!-- CONTACT Section  -->
     <div id="contact" class="container-fluid bg-dark text-light border-top wow fadeIn">
         <div class="row">
@@ -91,7 +91,7 @@
             </div>
         </div>
     </div>
-
+</div>
     <!-- page footer  -->
     <div class="container-fluid bg-dark text-light has-height-md middle-items border-top text-center wow fadeIn">
         <div class="row">
