--- a/indexsin.html
+++ b/indexsin.html
@@ -218,7 +218,7 @@
                             <div class="card-body">
                                 <h4 class="pt20 pb20">හඬ කැවීමේ තරඟාවලිය </h4>
                                 <p class="text-white">නිර්මාණ භාරගැනීම <b>2022 ජූලි මස 9</b> වන දින සිට <b>ජූලි මස 31</b> වන දින දක්වා විවෘතව ඇත.</p>
-								<h3 class="text-center mb-4"><a href="dubbing.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>
+								<h3 class="text-center mb-4"><a href="dubbingsin.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>
 							</div>
                         </div>
                     </div>
@@ -228,7 +228,7 @@
                             <div class="card-body">
                                 <h4 class="pt20 pb20">ඡායාරූප සැකසීම් තරඟාවලිය</h4>
                                 <p class="text-white">නිර්මාණ භාරගැනීම <b>2022 ජූලි මස 9 </b>වන දින සිට <b>ජූලි මස 31</b> වන දින දක්වා විවෘතව ඇත. </p>
-								<h3 class="text-center mb-4"><a href="photomanipulation.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>
+								<h3 class="text-center mb-4"><a href="photomanipulationsin.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>
 							</div>
                         </div>
                     </div>
@@ -238,7 +238,7 @@
                             <div class="card-body">
                                 <h4 class="pt20 pb20">ඩිජිටල් චරිත සිතුවම් නිර්මාණ තරඟාවලිය</h4>
                                 <p class="text-white">නිර්මාණ භාරගැනීම <b>2022 ජූලි මස 9</b> වන දින සිට <b>ජූලි මස 31</b> වන දින දක්වා විවෘතව ඇත.</p>
-								<h3 class="text-center mb-4"><a href="comiccharacter.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>
+								<h3 class="text-center mb-4"><a href="comiccharactersin.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>
 							</div>
                         </div>
                     </div>
@@ -254,37 +254,37 @@
         <div class="row mt-3 mb-5">
             <div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
-                    <h3 class="testmonial-title">අතුල රන්සිරිලාල්</h3>
-                    <h6 class="testmonial-subtitle">හඬ කැවීමේ තරඟය</h6>
+					<img src="assets/imgs/judge1.jpg" style = "width:75%">
                     <div class="testmonial-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum nobis eligendi, quaerat accusamus ipsum sequi dignissimos consequuntur blanditiis natus. Aperiam!</p>
+                        <h3 class="testmonial-title">අතුල රන්සිරිලාල්</h3>
+						<h6 class="testmonial-subtitle">හඬ කැවීමේ තරඟය</h6>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
-                    <h3 class="testmonial-title">ප්‍රදීප් ප්‍රේමලාල්</h3>
-                    <h6 class="testmonial-subtitle">ඡායාරූප සැකසීමේ තරඟය</h6>
+					<img src="assets/imgs/judge2.jpg" style = "width:75%">
                     <div class="testmonial-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum minus obcaecati cum eligendi perferendis magni dolorum ipsum magnam, sunt reiciendis natus. Aperiam!</p>
+                        <h3 class="testmonial-title">ප්‍රදීප් ප්‍රේමලාල්</h3>
+						<h6 class="testmonial-subtitle">ඡායාරූප සැකසීමේ තරඟය</h6>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
-                    <h3 class="testmonial-title">හර්ශක රත්න කුමාර</h3>
-                    <h6 class="testmonial-subtitle">ඩිජිටල් චරිත සිතුවම් නිර්මාණ තරඟය</h6>
+					<img src="assets/imgs/judge3.jpg" style = "width:75%">
                     <div class="testmonial-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, nam. Earum nobis eligendi, dignissimos consequuntur blanditiis natus. Aperiam!</p>
+                        <h3 class="testmonial-title">හර්ශක රත්න කුමාර</h3>
+						<h6 class="testmonial-subtitle">ඩිජිටල් චරිත සිතුවම් නිර්මාණ තරඟය</h6>
                     </div>
                 </div>
             </div>
 			<div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
-                    <h3 class="testmonial-title">සාරංග මහතා</h3>
-                    <h6 class="testmonial-subtitle">ඩිජිටල් චරිත සිතුවම් නිර්මාණ තරඟය</h6>
+					<img src="assets/imgs/judge4.jpg" style = "width:75%">
                     <div class="testmonial-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, nam. Earum nobis eligendi, dignissimos consequuntur blanditiis natus. Aperiam!</p>
+                        <h3 class="testmonial-title">සාරංග මහතා</h3>
+						<h6 class="testmonial-subtitle">ඩිජිටල් චරිත සිතුවම් නිර්මාණ තරඟය</h6>
                     </div>
                 </div>
 			</div>
