--- a/photomanipulationsin.html
+++ b/photomanipulationsin.html
@@ -120,37 +120,37 @@
         <div class="row mt-3 mb-5">
             <div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
-                    <h3 class="testmonial-title">අතුල රන්සිරිලාල්</h3>
-                    <h6 class="testmonial-subtitle">හඬ කැවීමේ තරඟය</h6>
+					<img src="assets/imgs/judge1.jpg" style = "width:75%">
                     <div class="testmonial-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum nobis eligendi, quaerat accusamus ipsum sequi dignissimos consequuntur blanditiis natus. Aperiam!</p>
+                        <h3 class="testmonial-title">අතුල රන්සිරිලාල්</h3>
+						<h6 class="testmonial-subtitle">හඬ කැවීමේ තරඟය</h6>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
-                    <h3 class="testmonial-title">ප්‍රදීප් ප්‍රේමලාල්</h3>
-                    <h6 class="testmonial-subtitle">ඡායාරූප සැකසීමේ තරඟය</h6>
+					<img src="assets/imgs/judge2.jpg" style = "width:75%">
                     <div class="testmonial-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum minus obcaecati cum eligendi perferendis magni dolorum ipsum magnam, sunt reiciendis natus. Aperiam!</p>
+                        <h3 class="testmonial-title">ප්‍රදීප් ප්‍රේමලාල්</h3>
+						<h6 class="testmonial-subtitle">ඡායාරූප සැකසීමේ තරඟය</h6>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
-                    <h3 class="testmonial-title">හර්ශක රත්න කුමාර</h3>
-                    <h6 class="testmonial-subtitle">ඩිජිටල් චරිත සිතුවම් නිර්මාණ තරඟය</h6>
+					<img src="assets/imgs/judge3.jpg" style = "width:75%">
                     <div class="testmonial-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, nam. Earum nobis eligendi, dignissimos consequuntur blanditiis natus. Aperiam!</p>
+                        <h3 class="testmonial-title">හර්ශක රත්න කුමාර</h3>
+						<h6 class="testmonial-subtitle">ඩිජිටල් චරිත සිතුවම් නිර්මාණ තරඟය</h6>
                     </div>
                 </div>
             </div>
 			<div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
-                    <h3 class="testmonial-title">සාරංග මහතා</h3>
-                    <h6 class="testmonial-subtitle">ඩිජිටල් චරිත සිතුවම් නිර්මාණ තරඟය</h6>
+					<img src="assets/imgs/judge4.jpg" style = "width:75%">
                     <div class="testmonial-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, nam. Earum nobis eligendi, dignissimos consequuntur blanditiis natus. Aperiam!</p>
+                        <h3 class="testmonial-title">සාරංග මහතා</h3>
+						<h6 class="testmonial-subtitle">ඩිජිටල් චරිත සිතුවම් නිර්මාණ තරඟය</h6>
                     </div>
                 </div>
 			</div>
