--- a/photomanipulationeng.html
+++ b/photomanipulationeng.html
@@ -121,37 +121,37 @@
         <div class="row mt-3 mb-5">
             <div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
-                    <h3 class="testmonial-title">Athula Ransirilal</h3>
-                    <h6 class="testmonial-subtitle">Dubbing Competition</h6>
+					<img src="assets/imgs/judge1.jpg" style = "width:75%"> 
                     <div class="testmonial-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum nobis eligendi, quaerat accusamus ipsum sequi dignissimos consequuntur blanditiis natus. Aperiam!</p>
+                        <h3 class="testmonial-title">Athula Ransirilal</h3>
+						<h6 class="testmonial-subtitle">Dubbing Competition</h6>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
-                    <h3 class="testmonial-title">Pradeep Premalal</h3>
-                    <h6 class="testmonial-subtitle">Photo Manipulation Competition</h6>
+					<img src="assets/imgs/judge2.jpg" style = "width:75%"> 
                     <div class="testmonial-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum minus obcaecati cum eligendi perferendis magni dolorum ipsum magnam, sunt reiciendis natus. Aperiam!</p>
+                        <h3 class="testmonial-title">Pradeep Premalal</h3>
+						<h6 class="testmonial-subtitle">Photo Manipulation Competition</h6>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
-                    <h3 class="testmonial-title">Harshaka Rathnakumara</h3>
-                    <h6 class="testmonial-subtitle">Comic Character Creation Competition</h6>
+					<img src="assets/imgs/judge3.jpg" style = "width:75%">
                     <div class="testmonial-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, nam. Earum nobis eligendi, dignissimos consequuntur blanditiis natus. Aperiam!</p>
+                        <h3 class="testmonial-title">Harshaka Rathnakumara</h3>
+						<h6 class="testmonial-subtitle">Comic Character Creation Competition</h6>
                     </div>
                 </div>
             </div>
 			<div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
-                    <h3 class="testmonial-title">Saranga</h3>
-                    <h6 class="testmonial-subtitle">Comic Character Creation Competition</h6>
+					<img src="assets/imgs/judge4.jpg" style = "width:75%">
                     <div class="testmonial-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, nam. Earum nobis eligendi, dignissimos consequuntur blanditiis natus. Aperiam!</p>
+                        <h3 class="testmonial-title">Saranga</h3>
+						<h6 class="testmonial-subtitle">Comic Character Creation Competition</h6>
                     </div>
                 </div>
             </div>
