--- a/comiccharactereng.html
+++ b/comiccharactereng.html
@@ -115,7 +115,7 @@
 	<div id="event" class="container-fluid bg-dark text-light py-5 text-center wow fadeIn">
     <!-- REVIEWS Section  -->
     <div id="testmonial" class="container-fluid wow fadeIn bg-dark text-light has-height-lg middle-items">
-        <h2 class="section-title my-5 text-center">JUDGE PANEL</h2>
+        <h2 class="section-title my-5 text-center">JUDGE BOARD</h2>
         <div class="row mt-3 mb-5">
             <div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
