--- a/indexeng.html
+++ b/indexeng.html
@@ -57,7 +57,7 @@
                     <a class="nav-link" href="comiccharactereng.html">Comic Character</a>
                 </li>
                 <li class="nav-item">
-                    <a href="https://forms.gle/fZN97nDpnXTURfNn7" class="btn btn-primary ml-xl-4">Upload</a>
+                    <a href="https://forms.gle/WkKUezMZwkTPxApy6" class="btn btn-primary ml-xl-4">Register</a>
                 </li>
             </ul>
         </div>
