--- a/indexsin.html
+++ b/indexsin.html
@@ -57,7 +57,7 @@
                     <a class="nav-link" href="comiccharactersin.html">ඩිජිටල් චරිත සිතුවම් </a>
                 </li>
                 <li class="nav-item">
-                    <a href="https://forms.gle/DAHDQkRpsyEmDgAm8" class="btn btn-primary ml-xl-4">Upload</a>
+                    <a href="https://forms.gle/WkKUezMZwkTPxApy6" class="btn btn-primary ml-xl-4">Register</a>
                 </li>
             </ul>
         </div>
