--- a/comiccharactereng.html
+++ b/comiccharactereng.html
@@ -57,7 +57,7 @@
                     <a class="nav-link" href="#home">Comic Character </a>
                 </li>
                 <li class="nav-item">
-                    <a href="https://forms.gle/fZN97nDpnXTURfNn7" class="btn btn-primary ml-xl-4">Upload</a>
+                    <a href="https://forms.gle/dwx8WRz1Gbgj1Msp8" class="btn btn-primary ml-xl-4">Upload</a>
                 </li>
             </ul>
         </div>
@@ -68,7 +68,7 @@
             <h1 class="display-2 font-weight-bold my-3">"රූසර-2022, The Digital Art Competition"</h1>
             <h3 class="display-4 mb-5">Comic Character Creation Competition </h3>
 			<h2 class="display-4 mb-5">2022</h2>
-            <a class="btn btn-lg btn-primary" href="https://forms.gle/fZN97nDpnXTURfNn7">Upload Here <i class = "ti-upload"></i></a>
+            <a class="btn btn-lg btn-primary" href="https://forms.gle/WkKUezMZwkTPxApy6">Register Here <i class = "ti-upload"></i></a>
         </div>
     </header>
 
@@ -109,7 +109,7 @@
 	<div class="container-fluid has-bg-overlay text-center text-light has-height-lg middle-items" id="book-table">
         <div class="">
             <h2 class="section-title mb-5">UPLOAUD YOUR FILE</h2>
-            <a href="https://forms.gle/fZN97nDpnXTURfNn7" class="btn btn-lg btn-primary" id="rounded-btn">Upload <i class = "ti-upload"></i></a>
+            <a href="https://forms.gle/dwx8WRz1Gbgj1Msp8" class="btn btn-lg btn-primary" id="rounded-btn">Upload <i class = "ti-upload"></i></a>
         </div>
     </div>
 	<div id="event" class="container-fluid bg-dark text-light py-5 text-center wow fadeIn">
