--- a/photomanipulationsin.html
+++ b/photomanipulationsin.html
@@ -57,7 +57,7 @@
                     <a class="nav-link" href="comiccharactersin.html">ඩිජිටල් චරිත සිතුවම් </a>
                 </li>
                 <li class="nav-item">
-                    <a href="https://forms.gle/DAHDQkRpsyEmDgAm8" class="btn btn-primary ml-xl-4">Upload</a>
+                    <a href="https://forms.gle/okN6GoPb52vjEzGr9" class="btn btn-primary ml-xl-4">Upload</a>
                 </li>
             </ul>
         </div>
@@ -68,7 +68,7 @@
             <h1 class="display-2 font-weight-bold my-3">"රූසර ඩිජිටල් නිර්මාණ තරඟාවලිය"</h1>
             <h3 class="display-4 mb-5">ඡායාරූප සැකසීමේ තරඟාවලිය </h3>
 			<h2 class="display-4 mb-5">2022</h2>
-            <a class="btn btn-lg btn-primary" href="https://forms.gle/DAHDQkRpsyEmDgAm8">Upload Here <i class = "ti-upload"></i></a>
+            <a class="btn btn-lg btn-primary" href="https://forms.gle/WkKUezMZwkTPxApy6">Register Here <i class = "ti-upload"></i></a>
         </div>
     </header>
 
@@ -110,7 +110,7 @@
 	<div class="container-fluid has-bg-overlay text-center text-light has-height-lg middle-items" id="book-table">
         <div class="">
             <h2 class="section-title mb-5">UPLOAUD YOUR FILE</h2>
-            <a href="https://forms.gle/DAHDQkRpsyEmDgAm8" class="btn btn-lg btn-primary" id="rounded-btn">Upload <i class = "ti-upload"></i></a>
+            <a href="https://forms.gle/okN6GoPb52vjEzGr9" class="btn btn-lg btn-primary" id="rounded-btn">Upload <i class = "ti-upload"></i></a>
         </div>
     </div>
 	<div id="event" class="container-fluid bg-dark text-light py-5 text-center wow fadeIn">
