--- a/indexeng.html
+++ b/indexeng.html
@@ -29,14 +29,14 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#about">About</a>
                 </li>
+				<li class="nav-item">
+                    <a class="nav-link" href="#event">Event</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#gallary">Gallery</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#social">Social Media</a>
-                </li>
-				<li class="nav-item">
-                    <a class="nav-link" href="#event">Event</a>
                 </li>
 				<li class="nav-item">
                     <a class="nav-link" href="#contact">Contact </a> <!--<span class="sr-only"></span></a>-->
@@ -95,7 +95,62 @@
             </div>
         </div>
     </div>
-
+	
+	 <!-- EVENT Section  -->
+	<div id="event" class="container-fluid bg-dark text-light py-5 text-center wow fadeIn">
+        <h2 class="section-title py-5">EVENTS</h2>
+        <div class="row justify-content-center">
+            <div class="col-sm-7 col-md-4 mb-5">
+                <ul class="nav nav-pills nav-justified mb-3" id="pills-tab" role="tablist">
+                    <!--
+					<li class="nav-item">
+                        <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#foods" role="tab" aria-controls="pills-home" aria-selected="true">Foods</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#juices" role="tab" aria-controls="pills-profile" aria-selected="false">Juices</a>
+                    </li>-->
+                </ul>
+            </div>
+        </div>
+        <div class="tab-content" id="pills-tabContent">
+            <div class="tab-pane fade show active" id="foods" role="tabpanel" aria-labelledby="pills-home-tab">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card bg-transparent border my-3 my-md-0">
+                            <img src="assets/imgs/event1.jpg" class="rounded-0 card-img-top mg-responsive">
+                            <div class="card-body">
+                                <h4 class="pt20 pb20">Dubbing Competition </h4>
+                                <p class="text-white">Submissions for each category will be opened from the <b>9th of July 2022</b> to the <b>31st of July 2022</b>.</p>
+								<h3 class="text-center mb-4"><a href="dubbingeng.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>
+							</div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card bg-transparent border my-3 my-md-0">
+                            <img src="assets/imgs/event2.jpg" class="rounded-0 card-img-top mg-responsive">
+                            <div class="card-body">
+                                <h4 class="pt20 pb20">Photo Manipulation Competition</h4>
+                                <p class="text-white">Submissions for each category will be opened from the <b>9th of July 2022</b> to the <b>31st of July 2022</b>.</p>
+								<h3 class="text-center mb-4"><a href="photomanipulationeng.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>
+							</div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card bg-transparent border my-3 my-md-0">
+                            <img src="assets/imgs/event3.jpg" class="rounded-0 card-img-top mg-responsive">
+                            <div class="card-body">
+                                <h4 class="pt20 pb20">Comic Character Creation Competition</h4>
+                                <p class="text-white">Submissions for each category will be opened from the <b>9th of July 2022</b> to the <b>31st of July 2022</b>.</p>
+								<h3 class="text-center mb-4"><a href="comiccharactereng.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>
+							</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+	
     <!--  gallary Section  -->
     <div id="gallary" class="text-center bg-dark text-light has-height-md middle-items wow fadeIn">
         <h2 class="section-title">RUUSARA '21</h2>
@@ -161,13 +216,13 @@
 			<div class = "gallary row">
 				<div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
 					<img src="assets/imgs/scocial-1.jpg" class="gallary-img">
-					<a href="#" class="gallary-overlay">
+					<a href="assets/imgs/scocial-1.jpg" class="gallary-overlay">
 						<i class="gallary-icon "></i>
 					</a>
 				</div>
 				<div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
 					<img src="assets/imgs/scocial-2.jpg" class="gallary-img">
-					<a href="#" class="gallary-overlay">
+					<a href="assets/imgs/scocial-2.jpg" class="gallary-overlay">
 						<i class="gallary-icon "></i>
 					</a>
 				</div>
@@ -190,61 +245,6 @@
 					</a>
 				</div>
 			</div>
-        </div>
-    </div>
-
-    <!-- BLOG Section  -->
-    <div id="event" class="container-fluid bg-dark text-light py-5 text-center wow fadeIn">
-        <h2 class="section-title py-5">EVENTS</h2>
-        <div class="row justify-content-center">
-            <div class="col-sm-7 col-md-4 mb-5">
-                <ul class="nav nav-pills nav-justified mb-3" id="pills-tab" role="tablist">
-                    <!--
-					<li class="nav-item">
-                        <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#foods" role="tab" aria-controls="pills-home" aria-selected="true">Foods</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#juices" role="tab" aria-controls="pills-profile" aria-selected="false">Juices</a>
-                    </li>-->
-                </ul>
-            </div>
-        </div>
-        <div class="tab-content" id="pills-tabContent">
-            <div class="tab-pane fade show active" id="foods" role="tabpanel" aria-labelledby="pills-home-tab">
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="card bg-transparent border my-3 my-md-0">
-                            <img src="assets/imgs/event1.jpg" class="rounded-0 card-img-top mg-responsive">
-                            <div class="card-body">
-                                <h4 class="pt20 pb20">Dubbing Competition </h4>
-                                <p class="text-white">Submissions for each category will be opened from the <b>9th of July 2022</b> to the <b>31st of July 2022</b>.</p>
-								<h3 class="text-center mb-4"><a href="dubbingeng.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>
-							</div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card bg-transparent border my-3 my-md-0">
-                            <img src="assets/imgs/event2.jpg" class="rounded-0 card-img-top mg-responsive">
-                            <div class="card-body">
-                                <h4 class="pt20 pb20">Photo Manipulation Competition</h4>
-                                <p class="text-white">Submissions for each category will be opened from the <b>9th of July 2022</b> to the <b>31st of July 2022</b>.</p>
-								<h3 class="text-center mb-4"><a href="photomanipulationeng.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>
-							</div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card bg-transparent border my-3 my-md-0">
-                            <img src="assets/imgs/event3.jpg" class="rounded-0 card-img-top mg-responsive">
-                            <div class="card-body">
-                                <h4 class="pt20 pb20">Comic Character Creation Competition</h4>
-                                <p class="text-white">Submissions for each category will be opened from the <b>9th of July 2022</b> to the <b>31st of July 2022</b>.</p>
-								<h3 class="text-center mb-4"><a href="comiccharactereng.html" class="badge badge-primary"><span>See More..</span><i class="ti-location-arrow"></i></a></h3>
-							</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            
         </div>
     </div>
 
