--- a/comiccharactereng.html
+++ b/comiccharactereng.html
@@ -108,7 +108,7 @@
 	
 	<div class="container-fluid has-bg-overlay text-center text-light has-height-lg middle-items" id="book-table">
         <div class="">
-            <h2 class="section-title mb-5">UPLOAUD YOUR FILE</h2>
+            <h2 class="section-title mb-5">UPLOAD YOUR FILE</h2>
             <a href="https://forms.gle/dwx8WRz1Gbgj1Msp8" class="btn btn-lg btn-primary" id="rounded-btn">Upload <i class = "ti-upload"></i></a>
         </div>
     </div>
@@ -121,7 +121,7 @@
                 <div class="testmonial-card">
 					<img src="assets/imgs/judge1.jpg" style = "width:75%"> 
                     <div class="testmonial-body">
-                        <h3 class="testmonial-title">Athula Ransirilal</h3>
+                        <h3 class="testmonial-title">Mr. Athula Ransirilal</h3>
 						<h6 class="testmonial-subtitle">Dubbing Competition</h6>
                     </div>
                 </div>
@@ -130,7 +130,7 @@
                 <div class="testmonial-card">
 					<img src="assets/imgs/judge2.jpg" style = "width:75%"> 
                     <div class="testmonial-body">
-                        <h3 class="testmonial-title">Pradeep Premalal</h3>
+                        <h3 class="testmonial-title">Mr. Pradeep Premalal</h3>
 						<h6 class="testmonial-subtitle">Photo Manipulation Competition</h6>
                     </div>
                 </div>
@@ -139,7 +139,7 @@
                 <div class="testmonial-card">
 					<img src="assets/imgs/judge3.jpg" style = "width:75%">
                     <div class="testmonial-body">
-                        <h3 class="testmonial-title">Harshaka Rathnakumara</h3>
+                        <h3 class="testmonial-title">Mr. Harshaka Rathnakumara</h3>
 						<h6 class="testmonial-subtitle">Comic Character Creation Competition</h6>
                     </div>
                 </div>
@@ -148,7 +148,7 @@
                 <div class="testmonial-card">
 					<img src="assets/imgs/judge4.jpg" style = "width:75%">
                     <div class="testmonial-body">
-                        <h3 class="testmonial-title">Saranga</h3>
+                        <h3 class="testmonial-title">Mr. Saranga</h3>
 						<h6 class="testmonial-subtitle">Comic Character Creation Competition</h6>
                     </div>
                 </div>
