--- a/comiccharactersin.html
+++ b/comiccharactersin.html
@@ -111,7 +111,7 @@
 	
 	<div class="container-fluid has-bg-overlay text-center text-light has-height-lg middle-items" id="book-table">
         <div class="">
-            <h2 class="section-title mb-5">UPLOAUD YOUR FILE</h2>
+            <h2 class="section-title mb-5">UPLOAD YOUR FILE</h2>
             <a href="https://forms.gle/dwx8WRz1Gbgj1Msp8" class="btn btn-lg btn-primary" id="rounded-btn">Upload <i class = "ti-upload"></i></a>
         </div>
     </div>
